fix: boost button on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6199,7 +6199,7 @@ Go Top CSS
   .boost-mobile-btn {
     width: 75px;
     margin: 0px auto 0 auto;
-    padding: 7px 0;
+    padding: 0px 0;
     font-family: 'Orbitron', monospace;
     font-size: 1.2em;
     color: #00eaff;
